<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.on.oicr.gsi</groupId>
  <artifactId>shesmu</artifactId>
  <version>1.58.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Shesmu Decision-Action Server</name>
  <url>https://github.com/oicr-gsi/shesmu</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <timestamp>${maven.build.timestamp}</timestamp>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss.SSSZ</maven.build.timestamp.format>
  </properties>
  <scm>
    <connection>scm:git:https://www.github.com/oicr-gsi/shesmu</connection>
    <developerConnection>scm:git:git@github.com:oicr-gsi/shesmu</developerConnection>
    <url>http://www.github.com/oicr-gsi/shesmu-gsi</url>
    <tag>v1.16.0</tag>
  </scm>
  <repositories>
    <repository>
      <id>release.gsi</id>
      <name>GSI Releases Maven Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>snapshots.gsi</id>
      <name>GSI Releases Maven Snapshot Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>dependencies.gsi</id>
      <name>GSI Dependencies Maven Snapshot Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-dependencies</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>deploy.artifacts.oicr</id>
      <name>GSI Releases</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release</url>
    </repository>
    <snapshotRepository>
      <id>deploy.artifacts.oicr</id>
      <name>GSI Snapshots</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>shesmu-pluginapi</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>shesmu-plugin-gsi-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.16.1</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>2.16.1</version>
      </dependency>
      <dependency>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>server-utils</artifactId>
        <version>1.0.4</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient_common</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient_hotspot</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.9.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.9.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.kohsuke.metainf-services</groupId>
        <artifactId>metainf-services</artifactId>
        <version>1.9</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-commons</artifactId>
        <version>9.4</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-tree</artifactId>
        <version>9.4</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-util</artifactId>
        <version>9.4</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.11.0</version>
      </dependency>
      <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>4.5.3</version>
      </dependency>
      <dependency>
        <groupId>io.github.bonigarcia</groupId>
        <artifactId>webdrivermanager</artifactId>
        <version>6.1.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-csv</artifactId>
        <version>1.10.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>1.10.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <modules>
    <module>shesmu-pluginapi</module>
    <module>shesmu-server</module>
    <module>plugin-gsi-common</module>
    <module>plugin-runscanner</module>
    <module>plugin-cardea</module>
    <module>plugin-cerberus</module>
    <module>plugin-github</module>
    <module>plugin-guanyin</module>
    <module>plugin-intervals</module>
    <module>plugin-jira</module>
    <module>plugin-loki</module>
    <module>plugin-mongo</module>
    <module>plugin-nabu</module>
    <module>plugin-pinery</module>
    <module>plugin-prometheus</module>
    <module>plugin-ratelimit</module>
    <module>plugin-sftp</module>
    <module>plugin-stdout</module>
    <module>plugin-tsv</module>
    <module>plugin-vidarr</module>
    <module>maintenance-editor</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <inherited>false</inherited>
        <executions>
          <execution>
            <id>npm-build</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>npm</executable>
              <arguments>
                <argument>run</argument>
                <argument>build</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>2.2.5</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.cosium.code</groupId>
        <artifactId>git-code-format-maven-plugin</artifactId>
        <version>4.2</version>
        <executions>
          <execution>
            <id>install-formatter-hook</id>
            <goals>
              <goal>install-hooks</goal>
            </goals>
          </execution>
          <execution>
            <id>validate-code-format</id>
            <goals>
              <goal>validate-code-format</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <!-- Requires custom JVM config in .mvn/jvm.config -->
          <!-- see https://github.com/Cosium/git-code-format-maven-plugin/blob/master/README.md -->
          <dependency>
            <groupId>com.cosium.code</groupId>
            <artifactId>google-java-format</artifactId>
            <version>4.2</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
